--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>Hi</p>
+    <h1>Queen</h1>
+    <p>Queen is a band that is made of 4 members, Freddie Mercury, Brian May, John Deacon, Roger Taylor</p>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
