--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <body>
     <h1>Queen</h1>
     <p>Queen is a band that is made of 4 members, Freddie Mercury, Brian May, John Deacon, Roger Taylor</p>
+    <p>They started in london in the year 1970, and then through out t years that they wer performing they made 18 number one albums,
+      18 number one singles and 10 number 1 dvd's.</p>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
