--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <p>Queen is a band that is made of 4 members, Freddie Mercury, Brian May, John Deacon, Roger Taylor</p>
     <p>They started in london in the year 1970, and then through out t years that they wer performing they made 18 number one albums,
       18 number one singles and 10 number 1 dvd's.</p>
+    <h1>Performances</h1>
+      <p>The Band no longer performs due to Freddie mercury passing away in the year 1991, and John Deacon Retiring in 1997, 
+        but Brian May and Roger Taylor still perform on occasions.</p>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
