--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h1>Performances</h1>
       <p>The Band no longer performs due to Freddie mercury passing away in the year 1991, and John Deacon Retiring in 1997, 
         but Brian May and Roger Taylor still perform on occasions.</p>
+    <h1>Queens Most Popular Songs</h1>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
