--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
     <h1>Performances</h1>
       <p>The Band no longer performs due to Freddie mercury passing away in the year 1991, and John Deacon Retiring in 1997, 
         but Brian May and Roger Taylor still perform on occasions.</p>
-    <h1>Queens Most Popular Songs</h1>
+    <h1>Top 10 Most Popular Queen Songs According to ultimateclassicrock.com</h1>
+      <ol>
+        <li>10: Stone Cold Crazy</li>
+        <li>9: Tie Your Mother Down</li>
+        <li>8: Killer Queen</li>
+        <li>7: Somebody to Love</li>
+        <li>6: Crazy Little Thing Called Love</li>
+        <li>5: Fat Bottomed Girls</li>
+        <li>4: Under Pressure (feat David Bowie)</li>
+        <li>3: Another One Bites The Dust</li>
+        <li>2: We Will Rock You/We Are The Champions</li>
+        <li>1: Bohemian Rhapsody</li>
+    </ol>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
