--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
         but Brian May and Roger Taylor still perform on occasions.</p>
     <h1>Top 10 Most Popular Queen Songs According to ultimateclassicrock.com</h1>
       <ol>
-        <li>10: Stone Cold Crazy</li>
-        <li>9: Tie Your Mother Down</li>
-        <li>8: Killer Queen</li>
-        <li>7: Somebody to Love</li>
-        <li>6: Crazy Little Thing Called Love</li>
-        <li>5: Fat Bottomed Girls</li>
-        <li>4: Under Pressure (feat David Bowie)</li>
-        <li>3: Another One Bites The Dust</li>
-        <li>2: We Will Rock You/We Are The Champions</li>
-        <li>1: Bohemian Rhapsody</li>
+        <li>Stone Cold Crazy</li>
+        <li>Tie Your Mother Down</li>
+        <li>Killer Queen</li>
+        <li>Somebody to Love</li>
+        <li>Crazy Little Thing Called Love</li>
+        <li>Fat Bottomed Girls</li>
+        <li>Under Pressure (feat David Bowie)</li>
+        <li>Another One Bites The Dust</li>
+        <li>We Will Rock You/We Are The Champions</li>
+        <li>Bohemian Rhapsody</li>
+    <h1>Top Selling Albums</h1>
+        <img src="http://ultimateclassicrock.com/files/2011/11/Queen-A-Night-At-The-Opera-Delantera.jpg?w=190&h=190&zc=1&s=0&a=t&q=89"/>
     </ol>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
