added 4 images and descriptions to the images

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         <li>Bohemian Rhapsody</li>
     <h1>Top Selling Albums</h1>
         <img src="http://ultimateclassicrock.com/files/2011/11/Queen-A-Night-At-The-Opera-Delantera.jpg?w=190&h=190&zc=1&s=0&a=t&q=89"/>
+        <p> A Night at the Opera is Queen's best selling album to date with a total of around 50 million sales<p>
+        <img src="http://ultimateclassicrock.com/files/2011/11/queen-news-of-the-world.jpg?w=190&h=190&zc=1&s=0&a=t&q=89"/>
+        <p> News of The World is Queen's Second best selling albums with around 10 million sales<p>
+        <img src="http://ultimateclassicrock.com/files/2011/11/queen-the-game.jpg?w=190&h=190&zc=1&s=0&a=t&q=89"/>
+        <p> The Game sold around 9 million albums making it the 3rd best selling albums of queens<p>
+        <img src="http://ultimateclassicrock.com/files/2011/11/QUEENADAYATTHERACES.jpg?w=190&h=190&zc=1&s=0&a=t&q=89"/>
+        <p> A Day at The Races is Queen's 4th best selling album</p>
     </ol>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
